--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+def recordTraceOnStart = project.hasProperty("recordTraceOnStart")
+
 android {
     compileSdkVersion 29
 
@@ -11,6 +13,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "boolean", "RECORD_TRACE_ON_START", "" +recordTraceOnStart
     }
 
     buildTypes {
